<resources>
    <string name="app_name">Semanai</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_actividad_cargando">ActividadCargando</string>
    <string name="title_activity_actividad_formulario">Datos iniciales</string>
    <string name="title_activity_actividad_reporte">ActividadReporte</string>
    <string name="alt_inicial">Altura inicial (m)</string>
    <string name="alt_final">Altura final (m)</string>
    <string name="tipo_material">Material a usar</string>
    <string name="cant_flujo">Flujo deseado (lts/s)</string>
    <string name="vel_inicial">Velocidad inicial (m/s)</string>
    <string name="dist_perdida">Distancia por pérdida de conexión (m)</string>
    <string name="descripcion">
        Completa la siguiente información
    </string>
    <string name="materiales_titulo">Selecciona el material a usar</string>

    <string-array name="materiales">
        <item>Acero</item>
        <item>PE</item>
        <item>PVC</item>
    </string-array>

    <string-array name="pulgadasPVC">
        <item>1/2</item>
        <item>3/4</item>
        <item>1</item>
        <item>5/4</item>
        <item>3/2</item>
        <item>2</item>
        <item>5/2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
    </string-array>

    <string-array name="pulgadasAcero">
        <item>1/8</item>
        <item>1/4</item>
        <item>3/8</item>
        <item>1/2</item>
        <item>3/4</item>
        <item>1</item>
        <item>5/4</item>
        <item>3/2</item>
        <item>2</item>
        <item>5/2</item>
        <item>3</item>
        <item>7/2</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
    </string-array>

    <string-array name="pulgadasPE">
        <item>1/2</item>
        <item>3/4</item>
        <item>1</item>
        <item>5/4</item>
        <item>3/2</item>
        <item>2</item>
        <item>5/2</item>
        <item>3</item>
        <item>7/2</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string name="button_siguiente">Siguiente</string>
    <string name="button_comenzar">Comenzar</string>
    <string name="long_descarga">Longitud de descarga (m)</string>
    <string name="colchon">Altura de seguridad (m)</string>
    <string name="espesor">Espesor del tubo (m)</string>

    <color name="background">#4264AF</color>
    <color name="fondoInd">#FFFFFF</color>
    <color name="textInd">#000000</color>
    <color name="whiteText">#FFFFFF</color>
    <color name="barras">#38393A</color>
    <string name="title_activity_actividad_nuevos_datos">ActividadNuevosDatos</string>

    <string name="hello_world">Hello world!</string>


</resources>
